[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "*"
derive-new = "*"
derive_more = "*"
env_logger = "*"
gcollections = "*"
grid = "*"
indexmap = "*"
indicatif = {version = "*", optional=true}
intervallum = "*"
itertools = "*"
log = "*"
num = "*"
pest = "*"
pest_derive = "*"
petgraph = "*"
regex = "*"
strum = { version = "*", features = ["derive"] }

[dev-dependencies]
test-log = "*"

[features]
default = ["progressbar"]
progressbar = ["dep:indicatif"]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
