[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cached = "*"
derive-new = {default-features = false}
derive_more = {default-features = false, features=["constructor", "add"]}
env_logger = {default-features = false, features=["humantime", "auto-color"]}
gcollections = "*"
grid = "*"
indexmap = {default-features = false}
indicatif = {version = "*", optional=true}
intervallum = "*"
itertools = "*"
log = "*"
num = {default-features = false}
pest = "*"
pest_derive = "*"
petgraph = {default-features = false}
regex = {default-features = false}
rustworkx-core = "*"
strum = { version = "*", features = ["derive"] }

[lib]
doctest = false

[dev-dependencies]
test-log = "*"

[features]
default = ["progressbar"]
progressbar = ["dep:indicatif"]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
