[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cached = "*"
derive-new = {version="*", default-features = false}
derive_more = {version="*", default-features = false, features=["constructor", "add"]}
env_logger = {version="*", default-features = false, features=["humantime", "auto-color"]}
gcollections = "*"
grid = "*"
indexmap = {version="*", default-features = false}
indicatif = {version = "*", optional=true}
intervallum = "*"
itertools = "*"
log = "*"
num = {version="*", default-features = false}
pest = "*"
pest_derive = "*"
petgraph = {version="*", default-features = false}
regex = {version="*", default-features = false}
rustworkx-core = "*"
strum = { version = "*", features = ["derive"] }

[lib]
doctest = false

[dev-dependencies]
test-log = "*"

[features]
default = ["progressbar"]
progressbar = ["dep:indicatif"]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
